Added transfer modal to front page and changed empty wallet message to be less offensive.

--- a/src/pages/modals/acceptdecline-modal/acceptdecline-modal.html
+++ b/src/pages/modals/acceptdecline-modal/acceptdecline-modal.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-title>
-            Transfer
+            Incoming Transfer
         </ion-title>
         <ion-buttons start>
             <button ion-button (click)="dismiss()">
