--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,8 +9,8 @@
 
   <div class="vertical-container" *ngIf="wallets.length == 0">
     <div class="vertical-align no-wallets-message">
-      <h2>Looks like you have no money!</h2>
-      <button ion-button round><ion-icon name="add"></ion-icon>&nbsp; Add Money</button>
+      <h2>Deposit money to start using mBarter!</h2>
+      <button ion-button round><ion-icon name="add"></ion-icon>&nbsp; Deposit</button>
     </div>
   </div>
 </ion-content>
