Small fix. Transfer object has a receiver name, not sender name.

--- a/src/pages/modals/transfers-modal/transfers-modal.html
+++ b/src/pages/modals/transfers-modal/transfers-modal.html
@@ -14,7 +14,7 @@
 
 <ion-content padding>
   <h4>From</h4>
-  <p>{{transfer.sender}}</p>
+  <p>{{transfer.receiver.name}}</p>
 
   <h4>Amount</h4>
   <p>{{transfer.amount}}</p>
