Small change. Refactored name of incoming to outgoingTransfers and changed order of switchcase to match ui.

--- a/src/pages/transfers/transfers.html
+++ b/src/pages/transfers/transfers.html
@@ -20,16 +20,8 @@
   </div>
 
   <div [ngSwitch]="action">
-    <ion-list *ngSwitchCase="'incoming'">
-      <ng-container *ngIf="incoming!=undefined">
-        <ion-item *ngFor="let transfer of incoming.data" (click)="showTransferModal(transfer)">
-          {{transfer.receiver.name}}
-          <p ion-text item-right color="out">{{transfer.amount}} OUT</p>
-        </ion-item>
-      </ng-container>
-    </ion-list>
 
-    <ion-list *ngSwitchCase="'outgoing'">
+    <ion-list *ngSwitchCase="'incoming'">
        <ion-item *ngFor="let transfer of incomingTransfers" (click)="showAcceptDeclineModal(transfer)">
         <ion-avatar item-left>
           <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
@@ -38,6 +30,16 @@
         <p ion-text item-right color="in">+{{transfer.amount}}</p>
       </ion-item>
     </ion-list>
+
+    <ion-list *ngSwitchCase="'outgoing'">
+      <ng-container *ngIf="outgoingTransfers!=undefined">
+        <ion-item *ngFor="let transfer of outgoingTransfers.data" (click)="showTransferModal(transfer)">
+          {{transfer.receiver.name}}
+          <p ion-text item-right color="out">{{transfer.amount}} OUT</p>
+        </ion-item>
+      </ng-container>
+    </ion-list>
+
   </div>
 
 </ion-content>
