--- a/src/pages/transfers/transfers.html
+++ b/src/pages/transfers/transfers.html
@@ -27,7 +27,7 @@
           <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
         </ion-avatar>
         <h2>{{transfer.sender}}</h2>
-        <p ion-text item-right color="in">+{{transfer.amount}}</p>
+        <p ion-text item-right color="in">+ {{transfer.amount}}</p>
       </ion-item>
     </ion-list>
 
@@ -35,7 +35,7 @@
       <ng-container *ngIf="outgoingTransfers!=undefined">
         <ion-item *ngFor="let transfer of outgoingTransfers.data" (click)="showTransferModal(transfer)">
           {{transfer.receiver.name}}
-          <p ion-text item-right color="out">{{transfer.amount}} OUT</p>
+          <p ion-text item-right color="out">- {{transfer.amount}}</p>
         </ion-item>
       </ng-container>
     </ion-list>
