Transfer modal added to home page. (#92)
* Added transfer modal to front page and changed empty wallet message to be less offensive.

* Small fix. Transfer object has a receiver name, not sender name.

* Removed avatar picture.

* Created new modal page. This is nesesary because transfer log has a different format.

* Removed consol log.

* Update transactionslog-modal.scss

* Update transactionslog-modal.scss

--- a/src/pages/modals/transactionslog-modal/transactionslog-modal.html
+++ b/src/pages/modals/transactionslog-modal/transactionslog-modal.html
@@ -14,14 +14,11 @@
 
 <ion-content padding>
   <h4>From</h4>
-  <p>{{transfer.receiver.name}}</p>
+  <p>{{transfer.title}}</p>
 
   <h4>Amount</h4>
   <p>{{transfer.amount}}</p>
-
-  <h4>Message</h4>
-  <p>{{transfer.message}}</p>
-
+  
   <br>
   <br>
 
