--- a/src/pages/modals/acceptdecline-modal/acceptdecline-modal.html
+++ b/src/pages/modals/acceptdecline-modal/acceptdecline-modal.html
@@ -26,7 +26,9 @@
   <br>
 
   <div><i>Sent at {{transfer.created_at | date:'medium'  }}</i></div>
+  <div><i>Received at {{transfer.received_at | date:'medium'  }}</i></div>
 
+  
   <br>
   <button ion-button color="primary" (click)="accept()">Accept</button>
   <button ion-button color="danger" (click)="decline()">Decline</button>
