--- a/src/pages/modals/transactionslog-modal/transactionslog-modal.html
+++ b/src/pages/modals/transactionslog-modal/transactionslog-modal.html
@@ -13,16 +13,16 @@
 </ion-header>
 
 <ion-content padding>
-  <h4>From</h4>
+  <h4>{{to_or_from}}</h4>
   <p>{{transfer.title}}</p>
 
   <h4>Amount</h4>
-  <p>{{transfer.amount}}</p>
-  
+  <p>{{transfer.amount}}{{transfer.currency_code}}</p>
+
   <br>
   <br>
 
-  <div><i>Sent at {{transfer.created_at | date:'medium'  }}</i></div>
+  <div><i>{{send_or_receive}} {{transfer.created_at | date:'medium'  }}</i></div>
 
 </ion-content>
 
