--- a/src/pages/modals/transfers-modal/transfers-modal.html
+++ b/src/pages/modals/transfers-modal/transfers-modal.html
@@ -13,18 +13,21 @@
 </ion-header>
 
 <ion-content padding>
+
+  <p>Status: {{ transfer.status | uppercase}}</p>
+  <p>Sent at: {{ transfer.created_at | date:'medium' }}</p>
+  <p>Received on: {{ transfer.received_at | date:'medium' }}</p>
+
+  <h4>From</h4>
+  <p>{{ transfer.sender }}</p>
   <h4>To</h4>
-  <p>{{transfer.receiver.name}}</p>
+  <p>Name: {{ transfer.receiver.name }}</p>
+  <p>Phone: {{ transfer.receiver.phone_number }}</p>
+  <p>Email: {{ transfer.receiver.email ? transfer.receiver.email : 'N/A' }}</p>
 
   <h4>Amount</h4>
-  <p>{{transfer.amount}}</p>
-
+  <p>{{ transfer.amount }}</p>
   <h4>Message</h4>
-  <p>{{transfer.message}}</p>
-
-  <br>
-  <br>
-
-  <div><i>Sent at {{transfer.created_at | date:'medium'  }}</i></div>
+  <p>{{ transfer.message }}</p>
 
 </ion-content>
