--- a/src/pages/manage/manage.html
+++ b/src/pages/manage/manage.html
@@ -7,8 +7,8 @@
 </ion-header>
 
 
-<ion-content padding>
-  <div padding>
+<ion-content>
+  <div padding class="pb-0">
     <ion-segment [(ngModel)]="action">
       <ion-segment-button value="deposit" >
         Deposit
