--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -6,11 +6,8 @@
 
 </ion-header>
 
+<ion-content>
   <ion-card>
-    <ion-card-header>
-      General Options
-    </ion-card-header>
-
     <ion-list>
       <button ion-item [navPush]="editAccountPage">
         <ion-icon name="contact" item-left></ion-icon>
@@ -34,3 +31,4 @@
 
     </ion-list>
   </ion-card>
+</ion-content>
