--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 
 <ion-content [ngClass]="{'no-wallets': wallets.length == 0}">
-  <a class="sign-out" (tap)="logout()">Sign Out</a>
+  <a class="sign-out" (tap)="logoutPrompt()">Sign Out</a>
 
   <wallet-slide
           *ngIf="wallets.length > 0"
