--- a/src/pages/modals/transfers-modal/transfers-modal.html
+++ b/src/pages/modals/transfers-modal/transfers-modal.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Transfer Details
+      {{ (isIncoming) ? 'Incoming' : 'Outgoing' }} Transfer Details
     </ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
@@ -31,7 +31,9 @@
   </div>
 
   <h4>Amount</h4>
-  {{ (isIncoming) ? '+' : '-' }} {{transfer.amount}} {{isIncoming ? 'IN' : 'OUT'}}
+  <div [ngClass]=" {'negative': !isIncoming , 'positive': isIncoming}" class="amount">
+    {{ (isIncoming) ? '+' : '-' }} {{transfer.amount}} {{isIncoming ? 'IN' : 'OUT'}}
+  </div>
   <h4>Message</h4>
   <p>{{ transfer.message }}</p>
 
