--- a/src/pages/modals/transfers-modal/transfers-modal.html
+++ b/src/pages/modals/transfers-modal/transfers-modal.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Transfer Details
+      {{ (isIncoming) ? 'Incoming' : 'Outgoing' }} Transfer Details
     </ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
@@ -20,13 +20,16 @@
 
   <h4>From</h4>
   <p>{{ transfer.sender }}</p>
+
   <h4>To</h4>
   <p>Name: {{ transfer.receiver.name }}</p>
   <p>Phone: {{ transfer.receiver.phone_number }}</p>
   <p>Email: {{ transfer.receiver.email ? transfer.receiver.email : 'N/A' }}</p>
 
   <h4>Amount</h4>
-  <p>{{ transfer.amount }}</p>
+  <div [ngClass]=" {'negative': !isIncoming , 'positive': isIncoming}" class="amount">
+    {{ (isIncoming) ? '+' : '-' }} {{transfer.amount}} {{isIncoming ? 'IN' : 'OUT'}}
+  </div>
   <h4>Message</h4>
   <p>{{ transfer.message }}</p>
 
